[project]
authors = [{name = "Paul Tomasula", email = "ptomasula@gmail.com"}]
dependencies = []
name = "HydroToolboxWrapper"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
hydrotoolboxwrapper = { path = ".", editable = true }

[tool.pixi.tasks]
