[project]
authors = [{name = "Paul Tomasula", email = "ptomasula@gmail.com"}]
dependencies = ["pythonnet"]
name = "hydro_toolbox_python"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/hydrotoolbox"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
hydrotoolboxwrapper = { path = ".", editable = true }

[tool.pixi.tasks]
