[project]
authors = [{name = "Paul Tomasula", email = "ptomasula@gmail.com"}]
dependencies = ["pythonnet"]
name = "hydrotoolboxpython"
requires-python = "<= 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/hydrotoolbox"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
hydrotoolboxpython = { path = ".", editable = true }

[tool.pixi.tasks]
